--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
 
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="app">
 
 <script src="assets/jquery/jquery-3.1.1.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
