--- a/src/popup.html
+++ b/src/popup.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>My Popup</title>
 
-  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body class="app">
 
-<script src="assets/jquery/jquery-3.1.1.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<!-- <script src="assets/jquery/jquery-3.1.1.js"></script> -->
+<!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
 
 </body>
 </html>
